Update RSS link, fix some posts and update body style for readability

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -20,6 +20,10 @@
   font-style: normal;
 }
 
+body, html, p, p a, li {
+    font-family: Georgia, Garamond, serif;
+}
+
 a,
 p a {
   transition: 0.4s ease-in-out;
@@ -36,15 +40,25 @@ html, body {
   font-family: "PrintClearlyRegular", "Helvetica", sans-serif;
 }
 
-p {
+p, li {
   line-height: 1.3;
   font-size: 1.3em;
 }
+
+/* Nav */
 
 nav.main-nav a {
   font-size: 1.5em;
   font-family: "PrintBold", "Helvetica", sans-serif;
   color: rgb(128, 128, 128);
+  line-height: 1;
+  padding: 5px 10px;
+}
+
+@media (max-width: 320px) {
+  nav.main-nav a {
+    font-size: 1.25em;
+  }
 }
 
 nav.main-nav a.cta {
@@ -55,9 +69,14 @@ nav.main-nav a.cta:hover {
   background: rgb(220, 16, 16);
 }
 
+/* Wrapper */
+#wrapper {
+  max-width: 960px;
+}
 
-
-
+strong, b {
+  font-weight: 600;
+}
 
 /* POST LIST*/
 #post-list .dates {
@@ -77,6 +96,34 @@ nav.main-nav a.cta:hover {
   color: rgb(128, 128, 128);
   font-family: "PrintBold", "Helvetica", sans-serif;
   font-size: 1.5em;
+  line-height: 1;
+}
+
+#post-meta div {
+    display: inline-block;
+    float: none;
+    margin: 0;
+    width: calc(100% - 95px);
+}
+
+#post-meta a,
+#post-meta #sharing {
+  display: inline-block;
+}
+
+#post-meta #sharing {
+  float: none;
+  margin: 20px 0 0 0;
+}
+
+#post-meta img.avatar {
+  width: 75px;
+  height: 75px;
+}
+
+/* Post Nav */
+#post-nav {
+  font-size: 1.5em;
 }
 
 
@@ -85,15 +132,28 @@ nav.main-nav a.cta:hover {
 {
   font-family: "PrintClearlyRegular", "Helvetica", sans-serif;
   font-size: 1.5em;
+  line-height: 1.2
 }
 
-h1, h2, h3, h4, h5, h6,
+h2, h3, h4, h5, h6 {
+  font-family: "PrintClearlyBold", "Helvetica", sans-serif;
+}
+
+h1,
 .post h1 {
-  font-family: "PrintBold", "Helvetica", sans-serif;
-  font-size: 1.5em;
+  font-size: 3em;
+  font-family: "PrintClearlyRegular", "Helvetica", sans-serif;
+}
+
+h3 {
+  font-size: 2em;
 }
 
 /* PROFILE */
 .profile h1 {
   font-size: 2em;
+}
+
+#footer {
+  box-shadow: none;
 }
